2008-09-16  Mario Torre  <neugens@aicas.com>

    * java/lang/System.java (getenv): Fix env entries of the form
    key=value=value=value not parsed correctly. 
	
2008-09-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	Reported by: Matthias Klose
	* tools/Makefile.am:
	Simplify the addition of the ANTLR
	JAR file to the classpath.
	
2008-09-14  Matthias Klose  <doko@ubuntu.com>

	* m4/ac_prog_antlr.m4:
	Allow use of runantlr on systems
	which have it (Debian/Ubuntu).
	
2008-09-14  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* examples/Makefile.am:
	Check lib directly as well as glibj.zip
	for boot classes.
	* m4/acinclude.m4:
	Only require the class files to be built
	to allow the tools and examples to be built,
	not the installation of glibj.zip.
	* tools/Makefile.am:
	Check lib directly as well as glibj.zip
	for boot classes.

2008-09-13  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* examples/Makefile.am,
	* lib/Makefile.am:
	Add GCJ rules.
	* m4/ac_prog_javac.m4:
	Check whether JAVAC is gcj.
	* m4/ac_prog_javac_works.m4:
	Add GCJ rules.
	* m4/acinclude.m4:
	Don't bother checking for -J
	if using GCJ.
	* tools/Makefile.am:
	Add GCJ rules.

2007-08-23  Daniel Frampton  <zyridium@zyridium.net>

	* AUTHORS: Added.
	* java/lang/InheritableThreadLocal.java,
	* java/lang/Thread.java,
	* java/lang/ThreadLocal.java:
	Modified to use java.lang.ThreadLocalMap.
	* java/lang/ThreadLocalMap.java:
	New cheaper ThreadLocal-specific WeakHashMap.

2008-02-07  Ian Rogers  <ian.rogers@manchester.ac.uk>

	* java/util/zip/ZipEntry.java:
	Use byte fields instead of integer fields,
	store the time as well as the DOS time and
	don't retain a global Calendar instance.
	(setDOSTime(int)): Set KNOWN_DOSTIME instead
	of KNOWN_TIME, and unset KNOWN_TIME.
	(getDOSTime()): Compute DOS time from UNIX time
	only when needed.
	(clone()): Provide cloning via the ZipEntry constructor
	where possible.
	(setTime(long)): Don't compute DOS time at this point.