@@ -1,7 +1,13 @@
+2008-09-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* java/lang/System.java (getenv): Reinstate
+	use of EnvironmentMap as opposed to raw
+	HashMap.
+
 2008-09-16  Mario Torre  <neugens@aicas.com>
 
-    * java/lang/System.java (getenv): Fix env entries of the form
-    key=value=value=value not parsed correctly. 
+	* java/lang/System.java (getenv): Fix env entries of the form
+	key=value=value=value not parsed correctly. 
 	
 2008-09-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
